fix: Markdown toolbar in dark mode #432

--- a/resources/sass/darkmode.scss
+++ b/resources/sass/darkmode.scss
@@ -35,6 +35,7 @@ body {
 
 #search-input {
   background-color: $card-bg !important;
+  border: 1px solid $border-bg !important;
 }
 
 .card,
